# common_resources

./: .gitignore  .rosinstall  LICENSE  README.md  aws.yml  circle.yml  repository.rosinstall
sr_controllers_tools/: CMakeLists.txt  README.md  package.xml  setup.py
sr_description_common/: CMakeLists.txt  package.xml
sr_description_common/ar_markers/: ar_marker_0_1_2_3_a4.xml  ar_marker_0_1_2_duplo.xml  ar_marker_0_1_2_lab_table.xml  ar_marker_0_1_duplo.xml
sr_description_common/meshes/: stand_link.stl  table_link.stl
sr_description_common/other/: robot_stand.urdf.xacro
sr_description_common/scenes/: 251_lab_table_duplo.scene  251_lab_table_full.scene  bimanual_demo_space_small.scene  bimanual_filling_line.scene  bimanual_filling_line_boxes.scene  bimanual_laminar_flow_boxes.scene  bimanual_stands.scene  customer_stand_bimanual.scene  customer_stand_bimanual_left_only.scene  customer_stand_bimanual_right_only.scene  customer_stand_unimanual.scene  customer_world_bimanual.scene  demo_space_large.scene  demo_space_large_bimanual.scene  demo_space_large_bimanual_fst.scene  demo_space_large_bimanual_server_rack.scene  demo_space_large_bimanual_test.scene  demo_space_large_folding_table.scene  demo_space_large_unimanual.scene  demo_space_large_unimanual_left.scene  demo_space_small.scene  erf_booth.scene  erf_booth_2.scene  filling_line_boxes.scene  future_labs.scene  iros_2018.scene  iros_booth.scene  iros_booth_1.scene  kit_scene.scene  lab.scene  lab_sim.scene  ms_garage.scene  ms_lab.scene  rob@work4.scene  xprize.scene
sr_description_common/sensors/: astra.gazebo.xacro  astra.urdf.xacro  ensenso.gazebo.xacro  ensenso.urdf.xacro  kinect.dae  kinect.gazebo.xacro  kinect.urdf.xacro
sr_description_common/worlds/: 251_lab_table_duplo.world  251_lab_table_full.world  alpha_glovebox.world  bimanual_demo_space_small.world  bimanual_filling_line.world  bimanual_filling_line_boxes.world  bimanual_filling_line_boxes_no_arms.world  bimanual_filling_line_simple.world  bimanual_laminar_flow_boxes.world  bimanual_stands.world  customer_stand_bimanual.world  customer_stand_bimanual_left_only.world  customer_stand_bimanual_right_only.world  customer_stand_unimanual.world  demo_space_kit.world  demo_space_large.world  demo_space_large_bimanual.world  demo_space_large_bimanual_fst.world  demo_space_large_bimanual_server_rack.world  demo_space_large_bimanual_test.world  demo_space_large_folding_table.world  demo_space_large_unimanual.world  demo_space_small.world  erf_booth.world  future_labs.world  hybrid_controller_testing.world  iros_2018.world  iros_booth.world  iros_booth_1.world  ms_garage.world  ms_lab.world  rob@work4.world  shadow_arms_and_hands_demo.world  shadowhand.world  shadowhands_and_arms.world  sila_world.world  sila_world_old.world  sr_lab.world  sr_simple.world  sr_stand_world.world  (+3 more)
sr_finger_mount/: CMakeLists.txt  README.md  package.xml  setup.py
sr_finger_mount/cfg/: mount_config.cfg
sr_finger_mount/launch/: sr_finger_mount_launch.launch
sr_finger_mount/src/: bck.py  mount_config.cfg  paul_test.py  pst_source.py  sr_finger_mount.py  sr_finger_mount_node.py  tes.py  test.py  test2.py
sr_firmware_checker/: CMakeLists.txt  package.xml
sr_firmware_checker/config/: known_good_firmware.txt
sr_firmware_checker/scripts/: ur_firmware_check  ur_firmware_check.sh
sr_hand_detector/: CMakeLists.txt  README.md  package.xml
sr_hand_detector/launch/: sr_hand_detector.launch
sr_hand_detector/test/: test_sr_hand_autodetect.cpp  test_sr_hand_autodetect.test
sr_logging_common/: CMakeLists.txt  package.xml
sr_logging_common/launch/: sr_rosbag_log.launch
sr_logging_common/logging/: bag_rotate.py  core_dump_limit.py  journalctl_pub.py  record_params.py  ws_diff.py
sr_msgs_common/: CMakeLists.txt  package.xml
sr_msgs_common/action/: Grasp.action
sr_msgs_common/msg/: AvailableObjects.msg  FingersInContact.msg  Grasp.msg  GraspCommand.msg  GraspObject.msg  SqueezeDirection.msg  SrRecognizedObject.msg  SrRecognizedObjectArray.msg  journal_log.msg
sr_msgs_common/srv/: GetGraspForKnownObject.srv  GetPoseByName.srv  MoveObject.srv
sr_run_trajectories/: CMakeLists.txt  README.md  package.xml  setup.py
sr_run_trajectories/config/: example_trajectories.yaml
sr_run_trajectories/launch/: run_trajectories.launch
sr_run_trajectories/scripts/: get_joint_angles.py  run_trajectories_node.py
sr_speech_control/: CMakeLists.txt  README.md  package.xml  setup.py
sr_speech_control/config/: similar_words_dict.yaml
sr_tests_template/: CMakeLists.txt  README.md  package.xml
sr_tests_template/test/: test_cpp_example.cpp  test_cpp_example.test  test_python_example.py  test_python_example.test
sr_ur_arm_calibration_loader/: CMakeLists.txt  README.md  package.xml  setup.py
sr_ur_arm_calibration_loader/scripts/: get_arm_calibration_file.py  load.sh  sr_ur_load_calibration  sr_ur_load_calibration.py  test.py
sr_utilities_common/: .lintignore  CMakeLists.txt  README.md  package.xml  setup.py
sr_utilities_common/action/: PowerManager.action
sr_utilities_common/config/: frames_to_remap.yaml  harting_trajectories.yaml  power_devices.yaml
sr_utilities_common/launch/: aws_manager.launch  bimanual_simple_kinematic_simulator.launch  conditional_delayed_rostool.launch  live_tf_republisher.launch  mock_watchdog.launch  performance_test.launch  real_time_tf_republisher.launch  right_hand_simple_kinematic_simulator.launch  simple_kinematic_simulator.launch  single_robot_position_republisher.launch
sr_utilities_common/msg/: BootProgress.msg  PowerFeedback.msg  PowerResult.msg  sr_power_feedback.msg
sr_utilities_common/srv/: CustomRelayCommand.srv
sr_utilities_common/test/: aws_manager.test  aws_manager_test.py  conditional_delayed_rostool_test.py  mocap_ros_elements.py  test_conditional_delayed_rostool.test
sr_watchdog/: CMakeLists.txt  README.md  package.xml  setup.py
sr_watchdog/gui/: main.html  main.js
sr_watchdog/launch/: mock_watchdog.launch  watchdog_web_gui.launch
sr_wear_logger/: CMakeLists.txt  README.md  package.xml  setup.py
(+505 files in other folders)
