<?xml version="1.0"?>
<package format="2">
  <name>sr_controllers_tools</name>
  <version>0.0.1</version>
  <description>The sr_controllers_tools package</description>
  <author email="giuseppe@shadowrobot.com">Giuseppe Barbieri</author>

  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>sr_robot_msgs</exec_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
