<?xml version="1.0"?>

<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package format="2">
  <name>sr_controllers_tools</name>
  <version>0.0.1</version>
  <description>The sr_controllers_tools package</description>
  <author email="giuseppe@shadowrobot.com">Giuseppe Barbieri</author>

  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>

  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>sr_robot_msgs</exec_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
