<?xml version="1.0"?>
<package format="2">
  <name>sr_finger_mount</name>
  <version>0.0.1</version>
  <description>The sr_finger_mount package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <!--  Uncomment | fix when 'sounddevice' is available to install with rosdep-->
  <!--  <build_depend>sounddevice</build_depend> -->

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
