<?xml version="1.0"?>
<package format="2">
  <name>sr_firmware_checker</name>
  <version>0.0.0</version>
  <description>The sr_firmware_checker package</description>
  <author email="fotios@shadowrobot.com">Fotios</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>net-tools</exec_depend>
  <export>

  </export>
</package>
