<?xml version="1.0"?>

<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package>
  <name>sr_logging_common</name>
  <version>1.0.0</version>
  <description>Contains logging information.</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPL</license>

  <url type="website">https://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/common_resources</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
