<?xml version="1.0"?>
<package format="2">
  <name>sr_run_trajectories</name>
  <version>0.0.0</version>
  <description>The sr_run_trajectories package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <author>Michal Kramarczyk</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
