<?xml version="1.0"?>
<package format="2">
  <name>sr_speech_control</name>
  <version>0.0.0</version>
  <description>The sr_speech_control package</description>
  <maintainer email="software@shadowrobot.com">Shadow's Software Team</maintainer>


  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-speechrecognition-pip</buildtool_depend>
  <exec_depend>python-speechrecognition-pip</exec_depend>
  <buildtool_depend>python-pyaudio</buildtool_depend>
  <exec_depend>python-pyaudio</exec_depend>
  <buildtool_depend>python3-pyaudio</buildtool_depend>
  <exec_depend>python3-pyaudio</exec_depend>

  <export>
  </export>
</package>
