<?xml version="1.0"?>

<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package format="2">
  <name>sr_speech_control</name>
  <version>0.0.0</version>
  <description>Package for controlling ros nodes with voice commands</description>
  <maintainer email="software@shadowrobot.com">Shadow's Software Team</maintainer>


  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-speechrecognition-pip</buildtool_depend>
  <exec_depend>python-speechrecognition-pip</exec_depend>
  <buildtool_depend>python3-pyaudio</buildtool_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <buildtool_depend>python-gTTS-pip</buildtool_depend>
  <exec_depend>python-gTTS-pip</exec_depend>
  <buildtool_depend>ffmpeg</buildtool_depend>
  <exec_depend>ffmpeg</exec_depend>


</package>
