<?xml version="1.0"?>

<!--
 Copyright 2022 Shadow Robot Company Ltd.
 This program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the Free
 Software Foundation version 2 of the License.
 This program is distributed in the hope that it will be useful, but WITHOUT
 ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
 more details.
 You should have received a copy of the GNU General Public License along
 with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<package format="2">
  <name>sr_ur_arm_calibration_loader</name>
  <version>0.0.0</version>
  <description>The sr_ur_arm_calibration_loader package</description>
  <author email="tom@shadowrobot.com">Tom Queen</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
