<?xml version="1.0"?>
<package>
  <name>sr_utilities_common</name>
  <version>1.0.0</version>
  <description>The sr_utilities_common package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot Ltd</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPL</license>

  <url type="website">https://www.shadowrobot.com</url>
  <url type="github repository">https://github.com/shadow-robot/sr_demos/</url>

  <author email="beatriz@shadowrobot.com">Beatriz Leon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python3-boto3</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
