<?xml version="1.0"?>
<package format="2">
  <name>sr_watchdog</name>
  <version>0.0.0</version>
  <description>The sr_watchdog package</description>
  <author email="michal@shadowrobot.com">Michal Kramarczyk</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>rosbridge_server</build_depend>
  <exec_depend>rosbridge_server</exec_depend>

</package>
