<?xml version="1.0"?>
<package format="2">
  <name>sr_watchdog</name>
  <version>0.0.0</version>
  <description>The sr_watchdog package</description>
  <author email="michal@shadowrobot.com">Michal Kramarczyk</author>
  <maintainer email="software@shadowrobot.com">Shadow Robot Software Team</maintainer>
  <license>GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>rosbridge_server</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
