<?xml version="1.0"?>
<package format="2">
  <name>sr_wear_logger</name>
  <version>0.0.0</version>
  <description>The sr_wear_logger package is used to collect data from in order to estimate the Mean Time Before Failure.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's Software Team</maintainer>

  <license>GPL</license>

  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>
  
  <export>
  </export>
</package>