<?xml version="1.0"?>
<package format="2">
  <name>sr_wear_logger</name>
  <version>0.0.0</version>
  <description>The sr_wear_logger package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's Software Team</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package> 